@startuml

enum UserType {
  CUSTOMER
  DRIVER
}

enum OrderStatus {
  PENDING
  ACCEPTED
  ON_COURSE
  DELIVERIED
}

class User {
  +int id
  +String username
  +String name
  +UserType type
}

class Order {
  +int id
  +int customerId
  +int? driverId
  +OrderStatus status
  +Address originAddress
  +Address destinationAddress
  +String description
  +String imageUrl
}

class Address {
  +int id
  +String street
  +String number
  +String neighborhood
  +String city
  +double latitude
  +double longitude
}

class LocationPoint {
  +int id
  +int orderId
  +DateTime createdAt
  +double latitude
  +double longitude
}

class NotificationPreference {
  +int userId
  +bool enabled
}

class Settings {
  +int userId
  +bool isDarkTheme
  +bool showCompletedOrders
}

User "1" -- "0..*" Order : cria >
User "1" -- "0..*" Order : entrega >
Order "1" -- "0..*" LocationPoint : rastreado por >
Order "1" --> "1" Address : origem >
Order "1" --> "1" Address : destino >
User "1" -- "1" NotificationPreference
User "1" -- "1" Settings

@enduml
